--- a/index.html
+++ b/index.html
@@ -218,15 +218,15 @@
           <!-- Fall 2023 ~ University at Buffalo -->
           <li><strong>(Fall 2023 ~) University at Buffalo</strong>, New York, United States
             <ul>
-              <li>Fall 2024Teaching assistance for the class, Univariate Statistics in Geography (GEO 211)</li>
+              <li>Teaching assistance for the class, Univariate Statistics in Geography (GEO 211) - Fall 2024</li>
               <li>Teaching assistance for the class, Earth, Environment, And Climate Lab (GEO 105) - Fall 2024</li>
               <li>Teaching assistance for the class, Geographic Information System (GEO 481/506) - Spring 2024</li>
               <li>Teaching assistance for the class, Geographic Information System (GEO 481/506) - Fall 2023</li>
             </ul>
           </li>
           <br>
-          <!-- Spring 2023 ~ Fall 2023 EWHA Womans UNIVERSITY -->
-          <li><strong>(Spring 2023 ~ Fall 2023) EWHA Womans University<</strong>, Seoul, South Korea
+          <!-- Spring 2023 EWHA Womans UNIVERSITY -->
+          <li><strong>(Spring 2023) EWHA Womans University</strong>, Seoul, South Korea
             <ul>
               <li>Designated as a part-time lecturer for the class, ‘Spatial statistics’ - Spring 2023</li>
             </ul>
